src/objects/Original_Sales_Rep__c.object
<CustomObject>
    <description>CSP-3120</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Original Sales Reps</relationshipLabel>
        <relationshipName>Original_Sales_Reps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Sales_Rep_ID__c</fullName>
        <formula>Original_Sales_Rep__r.SalesRepID__c</formula>
        <label>Original Sales Rep ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Original_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Activation_Date__c</fullName>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <description>The subscription name which triggers this record</description>
        <label>Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Original Sales Rep</label>
    <nameField>
        <displayFormat>OSR-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Original Sales Rep Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Original Sales Reps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>